--- a/resources/public/login.html
+++ b/resources/public/login.html
@@ -17,5 +17,6 @@
         </fieldset>
     </form>
     <script src="js/modern.js"></script>
+    <script>modern_cljs.login.init();</script>
 </body>
 </html>
